media query/bug squishing

--- a/.tmp/public/styles/importer.css
+++ b/.tmp/public/styles/importer.css
@@ -56,7 +56,7 @@ table {
     transform: rotate(90deg);
     margin-left: 6px;
     margin-top: 4px;
-    font-size: 16px; }
+    font-size: 14px; }
 
 #bubbles {
   height: 100%;
@@ -190,7 +190,10 @@ table {
     top: -500px; } }
 @media screen and (max-width: 952px) {
   table {
-    width: 800px; } }
+    width: 800px; }
+
+  th.sortable div:after {
+    display: none; } }
 @media screen and (max-width: 820px) {
   table {
     width: 600px; } }
@@ -204,9 +207,6 @@ table {
       font-size: .65em; }
 
   #bubbles {
-    display: none; }
-
-  th.sortable {
     display: none; } }
 @media screen and (max-width: 420px) {
   table {
@@ -362,6 +362,11 @@ table {
     text-align: left;
     padding: 15px;
     font-weight: 300; }
+  @media screen and (max-width: 622px) {
+    table .newtable {
+      font-size: .75em; }
+    table thead th {
+      font-size: .75em; } }
 
 .beerdetails {
   margin: 2em auto;
@@ -441,7 +446,7 @@ table {
   background-color: white;
   margin: 0 auto;
   padding: 2em;
-  font-size: 1.4em;
+  font-size: 1.2em;
   border: 1px solid grey;
   width: 500px; }
 .submitpage h1 {
@@ -517,15 +522,17 @@ table {
 .submitpage textarea:-moz-placeholder {
   font-size: 1em;
   color: #555; }
-@media screen and (max-width: 440px) {
-  .submitpage .formbody {
-    font-size: .5em; } }
-@media screen and (min-width: 740px) {
-  .submitpage .formbody {
-    margin: 0 auto;
-    font-size: 1em; } }
-@media screen and (min-width: 960px) {
+@media screen and (max-width: 960px) {
   .submitpage .formbody {
     margin: 0 auto; } }
+@media screen and (max-width: 740px) {
+  .submitpage .formbody {
+    margin: 0 auto;
+    font-size: 1em;
+    width: 375px; } }
+@media screen and (max-width: 440px) {
+  .submitpage .formbody {
+    font-size: .5em;
+    width: 300px; } }
 
 /*# sourceMappingURL=importer.css.map */
